squash! 3d04e67d6fe799069f4bbadc06c376dc24d428c8

MDEV-27482 2-argument CRC32 and CRC32C don't work in
virtual column expressions

Virtual columns assume that the arguments are being passed
to the Item_func constructor in the original order.